--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<meta charset="utf-8">
 		<link rel="canonical" href="https://www.percep.com.br" />
 		<link rel="stylesheet" type="text/css" href="landing.css">
-		<title>Percep 60-70 caracteres</title>
-		<meta name="description" content="texto de descrição para google +-150 caracteres">
+		<title>percep</title>
+		<meta name="description" content="Percep é um chabot brasileiro que permite que pessoas troquem percepções sobre seus atributos anonimamente.">
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<meta name="robots" content="noindex"/>
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@percep_">
+		<meta name="twitter:site" content="@percepbr">
 		<meta name="twitter:title" content="Page Title">
 		<meta name="twitter:description" content="Page description less than 200 characters">
 		<!-- Twitter summary card with large image must be at least 280x150px -->
@@ -32,7 +32,7 @@
 		<meta property="og:image" content="http://example.com/image.jpg" />
 		<meta property="og:description" content="Description Here" />
 		<meta property="og:site_name" content="Site Name, i.e. Moz" />
-		<meta property="fb:admins" content="Facebook numberic ID" />
+		<!--<meta property="fb:admins" content="Facebook numberic ID" />-->
 		
 		<!-- Facebook Pixel Code -->
 		<script>
@@ -135,11 +135,11 @@
 		<div id="section5">
 			<h2>E aí, qual sua percepção?</h2>
 			<!--<form id="gform" action="https://script.google.com/macros/s/AKfycbxggynp6lnAX6zRcd6w7kG6E-UXBP33n10X9E4vlQmaMY0GpVIA/exec" method="post" enctype="text/plain">-->
-			<form action="https://formspree.io/contato@percep.com.br" method="post" enctype="text/plain">
-				<input type="text" name="name" placeholder="Nome" maxlength="60" required/>
-				<input type="email" name="email" placeholder="E-mail" maxlength="100" required/>
+			<form action="https://formspree.io/contato@percep.com.br" method="post">
+				<input type="text" name="nome" placeholder="Nome" maxlength="60" required/>
+				<input type="email" name="_replyto" placeholder="E-mail" maxlength="100" required/>
 				<textarea type="text" name="message" placeholder="Mensagem" maxlength="2000" required/></textarea>
-				<button type="submit" name="enviar" onclick="">Enviar</button>
+				<button type="submit" name="enviar">Enviar</button>
 				<!--<input type="hidden" name="_next" value="https://site.io/thanks.html" />-->
 				<input type="hidden" name="_language" value="pt-BR" />
 			</form>
