--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
 				<textarea name="message" placeholder="Mensagem" maxlength="2000" required/></textarea>
 				<button type="submit">Enviar</button>
 				<!--<input type="hidden" name="_next" value="https://site.io/thanks.html" />-->
+				<input type="hidden" name="_subject" value="Mensagem pelo site do percep" />
+				<input type="hidden" name="_format" value="plain" />
 				<input type="hidden" name="_language" value="pt-BR" />
 			</form>
 		</div>
