--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -29,6 +29,8 @@
 			}
 			if (boolMovel == true){
 				location.href='https://www.facebook.com/percepbr/posts/634411333599263';
+			} else {
+				location.href='';
 			}
 		</script>
 
