--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -30,7 +30,7 @@
 			if (boolMovel == true){
 				location.href='https://www.facebook.com/percepbr/posts/634411333599263';
 			} else {
-				location.href='';
+				location.href='https://www.percep.com.br/termos.html';
 			}
 		</script>
 
