--- a/saiba-mais-compartilhar.html
+++ b/saiba-mais-compartilhar.html
@@ -17,7 +17,7 @@
 		</script>
 		
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="saiba-mais.css">
+		<link rel="stylesheet" type="text/css" href="saibamais.css">
 		<title>percep - como ganhar pontos por compartilhar o bot no Facebook</title>
 		<meta name="robots" content="noindex"/>
 
