--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -32,12 +32,14 @@
 	<div id="info">
 		<h1>Ganhe pontos por convidar um amigo</h1>
 			<p>
-				Convidar amigos pro percep pode te dar pontos e ajudar a desbloquear um novo atributo. É muito fácil:
+				Convidar amigos pro percep pode te dar pontos e ajudar a desbloquear um novo atributo.
+				<br>
+				É muito fácil:
 				<br><br>
 				- vá até o menu “opções" e clique em "convidar" ou em qualquer um dos botões "convidar amigos" no bot;
-				<br><br>
+				<br>
 				- envie o card de convite para quantos amigos quiser;
-				<br><br>
+				<br>
 				- para cada amigo que se cadastrar através do seu convite, você ganha 3 pontos.
 				<br><br>
 				E não esqueça que para você ter os pontos validados, seu amigo precisa completar os 3 passos do login sem interrupções.
