--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -36,7 +36,7 @@
 				<br>
 				É muito fácil:
 				<br><br>
-				- vá até o menu “opções" e clique em "convidar" ou em qualquer um dos botões "convidar amigos" no bot;
+				- vá até o menu “opções" e clique em "✉ Convidar" ou em qualquer um dos botões "Convidar amigos" no bot;
 				<br>
 				- envie o card de convite para quantos amigos quiser;
 				<br>
