--- a/saiba-mais-compartilhar.html
+++ b/saiba-mais-compartilhar.html
@@ -40,7 +40,7 @@
 				<br>
 				- marque o percep (@percepbr);
 				<br>
-				- cole o link <a href="#">https://www.percep.com.br/comecar</a> no seu post e deixe a prévia dele visível;
+				- cole o link <a href="https://www.percep.com.br/comecar">https://www.percep.com.br/comecar</a> no seu post e deixe a prévia dele visível;
 				<br>
 				- compartilhe como post público na sua timeline.
 				<br><br>
