--- a/saiba-mais-compartilhar.html
+++ b/saiba-mais-compartilhar.html
@@ -46,7 +46,7 @@
 				<br><br>
 				Pronto! Dentro de 24h seus pontos serão validados direto no seu perfil do percep e vamos enviar uma notificação te avisando.
 				<br><br>
-				Ah, e se você ainda não curtiu nossa página, aproveita e já curte também. :D
+				Ah, e se você ainda não curtiu nossa página, aproveita e já curte também. <img class="emotion" src="images/emotions/smile.png" alt="emoji de um sorriso">
 			</p>
 	</div>
 </body>
