--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -36,7 +36,7 @@
 				<br>
 				É muito fácil:
 				<br><br>
-				- vá até o menu “opções" e clique em "✉ Convidar" ou em qualquer um dos botões "Convidar amigos" no bot;
+				- vá até o menu “opções" e clique em "<img class="emotion" src="images/emotions/envelope.png" alt="emoji de um envelope"> Convidar" ou em qualquer um dos botões "Convidar amigos" no bot;
 				<br>
 				- envie o card de convite para quantos amigos quiser;
 				<br>
@@ -44,7 +44,7 @@
 				<br><br>
 				E não esqueça que para você ter os pontos validados, seu amigo precisa completar os 3 passos do login sem interrupções.
 				<br><br>
-				Está esperando o que? Corra e convide todos os seus amigos para o percep!
+				Está esperando o que? Corra e convide todos os seus amigos para o percep!<img class="emotion" src="images/emotions/run.png" alt="emoji de uma pessoa correndo">
 			</p>
 	</div>
 </body>
