--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 		<div id="section5">
 			<h2>E aí, qual sua percepção?</h2>
-			<!--<form id="gform" action="https://script.google.com/macros/s/AKfycbxggynp6lnAX6zRcd6w7kG6E-UXBP33n10X9E4vlQmaMY0GpVIA/exec" method="post" enctype="text/plain">-->
+			<!--<form id="gform" action="https://script.google.com/macros/s/AKfycbxggynp6lnAX6zRcd6w7kG6E-UXBP33n10X9E4vlQmaMY0GpVIA/exec" method="POST">-->
 			<form action="https://formspree.io/contato@percep.com.br" method="POST">
 				<input type="text" name="nome" placeholder="Nome" maxlength="60" required/>
 				<input type="email" name="email" placeholder="E-mail" maxlength="100" required/>
@@ -148,7 +148,7 @@
 		</div>
 		
 		<div id="footer">
-			<a href="https://www.percep.com.br/termos.html"><img src="images/white-terms.png" alt="ícone em versão branca dos Termos e Política de Privacidade"></a>
+			<a href="https://www.percep.com.br/termos-e-privacidade.html"><img src="images/white-terms.png" alt="ícone em versão branca dos Termos de Uso e Política de Privacidade"></a>
 			<a href="https://m.me/percepbr"><img src="images/white-messenger.png" alt="logo em versão branca do Facebook Messenger"></a>
 			<a href="https://www.facebook.com/percepbr"><img src="images/white-facebook.png" alt="logo em versão branca do Facebook"></a>
 			<a href="https://www.twitter.com/percepbr"><img src="images/white-twitter.png" alt="logo em versão branca do Twitter"></a>
