--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		</div>
 		
 		<div id="footer">
-			<a href="https://www.percep.com.br/termos-e-privacidade.html"><img src="images/white-terms.png" alt="ícone em versão branca dos Termos de Uso e Política de Privacidade"></a>
+			<a href="https://www.percep.com.br/termos-e-privacidade"><img src="images/white-terms.png" alt="ícone em versão branca dos Termos de Uso e Política de Privacidade"></a>
 			<a href="https://m.me/percepbr"><img src="images/white-messenger.png" alt="logo em versão branca do Facebook Messenger"></a>
 			<a href="https://www.facebook.com/percepbr"><img src="images/white-facebook.png" alt="logo em versão branca do Facebook"></a>
 			<a href="https://www.twitter.com/percepbr"><img src="images/white-twitter.png" alt="logo em versão branca do Twitter"></a>
