--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 		<meta charset="utf-8">
 		<link rel="canonical" href="https://www.percep.com.br" />
 		<link rel="stylesheet" type="text/css" href="landing.css">
-		<title>percep</title>
-		<meta name="description" content="Percep é um chabot brasileiro que permite que pessoas troquem percepções sobre seus atributos anonimamente.">
+		<title>Percep - Troque percepções com os seus amigos.</title>
+		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<meta name="robots" content="noindex"/>
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@percepbr">
-		<meta name="twitter:title" content="Page Title">
-		<meta name="twitter:description" content="Page description less than 200 characters">
+		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
+		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
 		<!-- Twitter summary card with large image must be at least 280x150px -->
-		<meta name="twitter:image:src" content="https://www.example.com/image.jpg">
+		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
 
 		<!-- Open Graph data -->
-		<meta property="og:title" content="Title Here" />
+		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://www.example.com/" />
-		<meta property="og:image" content="http://example.com/image.jpg" />
-		<meta property="og:description" content="Description Here" />
-		<meta property="og:site_name" content="Site Name, i.e. Moz" />
+		<meta property="og:url" content="https://www.percep.com.br" />
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
+		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:site_name" content="Percep" />
 		<!--<meta property="fb:admins" content="Facebook numberic ID" />-->
 		
 		<!-- Facebook Pixel Code -->
