--- a/comecar.html
+++ b/comecar.html
@@ -19,18 +19,18 @@
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@percepbr">
-		<meta name="twitter:title" content="percep">
-		<meta name="twitter:description" content="Page description less than 200 characters">
+		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
+		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
 		<!-- Twitter summary card with large image must be at least 280x150px -->
-		<meta name="twitter:image:src" content="https://www.example.com/image.jpg">
+		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
 
 		<!-- Open Graph data -->
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.percep.com.br/comecar.html" />
-		<meta property="og:image" content="https://www.percep.com.br/images/" />
-		<meta property="og:description" content="Description Here" />
-		<meta property="og:site_name" content="percep" />
+		<meta property="og:url" content="https://www.percep.com.br" />
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
+		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:site_name" content="Percep" />
 
 </head>
 <body>
