--- a/comecar.html
+++ b/comecar.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-			<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121874094-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
@@ -14,17 +13,15 @@
 	<META http-equiv="refresh" content="0;URL=https://m.me/percepbr">
 
 		
-		<title>percep - Messenger</title>
+		<title>Percep - Messenger</title>
 		<meta name="robots" content="noindex"/>
-		<!-- Twitter Card data -->
+
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@percepbr">
 		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
 		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
-		<!-- Twitter summary card with large image must be at least 280x150px -->
 		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
 
-		<!-- Open Graph data -->
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.percep.com.br" />
