--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 		<title>Percep - Troque percepções com os seus amigos.</title>
 		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<meta name="robots" content="noindex"/>
+		
+		<!-- Open Graph data -->
+		<meta property="og:title" content="O que seus amigos acham de você?" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.percep.com.br" />
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" /
+		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:site_name" content="Percep" />
+		<meta property="fb:admins" content="100027088850164" />
+
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@percepbr">
@@ -25,14 +34,7 @@
 		<!-- Twitter summary card with large image must be at least 280x150px -->
 		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
 
-		<!-- Open Graph data -->
-		<meta property="og:title" content="O que seus amigos acham de você?" >
-		<meta property="og:type" content="website" >
-		<meta property="og:url" content="https://www.percep.com.br" >
-		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" >
-		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." >
-		<meta property="og:site_name" content="Percep" >
-		<!--<meta property="fb:admins" content="Facebook numberic ID" />-->
+		<meta name="robots" content="noindex"/>
 		
 		<!-- Facebook Pixel Code -->
 		<script>
