--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.percep.com.br" />
-		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" /
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
 		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
 		<meta property="og:site_name" content="Percep" />
 		<meta property="fb:admins" content="100027088850164" />
