--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="landing.css" />
 		<link rel="canonical" href="https://www.percep.com.br" />
-		<link rel="stylesheet" type="text/css" href="landing.css">
 		<title>Percep - Troque percepções com os seus amigos.</title>
 		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.percep.com.br" />
