--- a/index.html
+++ b/index.html
@@ -1,21 +1,5 @@
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="landing.css" />
-		<link rel="canonical" href="https://www.percep.com.br" />
-		<title>Percep - Troque percepções com os seus amigos.</title>
-		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
-		<meta name=viewport content="width=device-width, initial-scale=1">
-		<meta property="og:title" content="O que seus amigos acham de você?" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.percep.com.br" />
-		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
-		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
-		<meta property="og:site_name" content="Percep" />
-		<meta property="fb:admins" content="100027088850164" />
-		<meta property="fb:app_id" content="543923569314707" />
-		
-		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121874094-1"></script>
 		<script>
@@ -24,7 +8,41 @@
 		  gtag('js', new Date());
 
 		  gtag('config', 'UA-121874094-1');
-		</script>	
+		</script>
+
+		<meta charset="utf-8">
+		<link rel="canonical" href="https://www.percep.com.br" />
+		<link rel="stylesheet" type="text/css" href="landing.css">
+		<title>Percep - Troque percepções com os seus amigos.</title>
+		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
+		<meta name=viewport content="width=device-width, initial-scale=1">
+		
+		<meta property="og:title" content="O que seus amigos acham de você?" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.percep.com.br" />
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
+		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:site_name" content="Percep" />
+		<meta property="fb:admins" content="100027088850164" />
+		<meta property="fb:app_id" content="543923569314707" />
+
+		<!-- Open Graph data 
+		<meta property="og:title" content="O que seus amigos acham de você?" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.percep.com.br" />
+		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
+		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:site_name" content="Percep" />
+		<meta property="fb:admins" content="100027088850164" />
+		<meta property="fb:app_id" content="543923569314707" />-->
+
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@percepbr">
+		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
+		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
+		<!-- Twitter summary card with large image must be at least 280x150px -->
+		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
 
 		<meta name="robots" content="noindex"/>
 		
