--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 	
 	<head>
 		<meta charset="utf-8">
-		<link rel="canonical" href="https://www.percep.com.br" />
-		<link rel="stylesheet" type="text/css" href="landing.css">
-		
+		<link rel="canonical" href="https://percep.com.br" />
+		<link rel="stylesheet" type="text/css" href="landing.css">		
+		<title>Percep - Troque percepções com os seus amigos.</title>
+		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
+		<meta name=viewport content="width=device-width, initial-scale=1">
+		<meta name="robots" content="noindex"/>
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.percep.com.br" />
-		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
+		<meta property="og:url" content="https://percep.com.br" />
+		<meta property="og:image" content="https://percep.com.br/images/social/share-bot.png" />
 		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
 		<meta property="og:site_name" content="Percep" />
 		<meta property="fb:admins" content="100027088850164" />
@@ -19,13 +22,7 @@
 		<meta name="twitter:site" content="@percepbr">
 		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
 		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
-		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
-		
-		<title>Percep - Troque percepções com os seus amigos.</title>
-		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
-		<meta name=viewport content="width=device-width, initial-scale=1">
-
-		<meta name="robots" content="noindex"/>
+		<meta name="twitter:image:src" content="https://percep.com.br/images/social/share-bot.png">
 		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121874094-1"></script>
