--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html lang="pt-br">
-	
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121874094-1"></script>
@@ -23,14 +22,15 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://percep.com.br" />
 		<meta property="og:image" content="https://percep.com.br/images/social/share-bot.png" />
-		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
+		<meta property="og:image:alt" content="Uma jovem tira uma selfie com seus amigos. Sobre o rosto dela está o card de votação do percep com o atributo humor, e sobre a cabeça dos amigos balões com a quantidade de estrelas que eles avaliariam." />
+		<meta property="og:description" content="Vote e receba votos dos seus amigos anonimamente. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
 		<meta property="og:site_name" content="Percep" />
 		<meta property="fb:admins" content="100027088850164" />
 
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@percepbr">
 		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
-		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
+		<meta name="twitter:description" content="Vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
 		<meta name="twitter:image:src" content="https://percep.com.br/images/social/share-bot.png">
 
 		
