--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta property="og:title" content="O que seus amigos acham de você?" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://percep.com.br" />
-		<meta property="og:image" content="https://percep.com.br/images/social/share-bot.pn" />
+		<meta property="og:image" content="https://percep.com.br/images/social/share-bot.png" />
 		<meta property="og:image:alt" content="Uma jovem tira uma selfie com seus amigos. Sobre o rosto dela está o card de votação do percep com o atributo humor, e sobre a cabeça dos amigos balões com a quantidade de estrelas que eles avaliariam." />
 		<meta property="og:description" content="Vote e receba votos dos seus amigos anonimamente, direto no Messenger." />
 		<meta property="og:site_name" content="Percep" />
