--- a/comecar.html
+++ b/comecar.html
@@ -1,38 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-	<META http-equiv="refresh" content="0;URL=https://m.me/percepbr">
-
-		
-		<meta charset="utf-8">
-		<link rel="canonical" href="https://www.percep.com.br/comecar" />
-		<link rel="stylesheet" type="text/css" href="landing.css">
-		<title>Percep - Troque percepções com os seus amigos.</title>
-		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
-		<meta name=viewport content="width=device-width, initial-scale=1">
-		
-		<!-- Open Graph data -->
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="O que seus amigos acham de você?" />
-		<meta property="og:url" content="https://www.percep.com.br" />
-		<meta property="og:image" content="https://www.percep.com.br/images/social/share-bot.png" />
-		<meta property="og:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger." />
-		<meta property="og:site_name" content="Percep" />
-		<meta property="fb:admins" content="100027088850164" />
-		<meta property="fb:app_id" content="543923569314707" />
-
-		<!-- Twitter Card data -->
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@percepbr">
-		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
-		<meta name="twitter:description" content="Acesse o percep, vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
-		<!-- Twitter summary card with large image must be at least 280x150px -->
-		<meta name="twitter:image:src" content="https://www.percep.com.br/images/social/share-bot.png">
-
-		<meta name="robots" content="noindex"/>
-		
-					<!-- Global site tag (gtag.js) - Google Analytics -->
+			<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121874094-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
@@ -42,7 +11,31 @@
 		  gtag('config', 'UA-121874094-1');
 		</script>
 
+	<META http-equiv="refresh" content="0;URL=https://m.me/percepbr">
 
+		
+		<meta charset="utf-8">
+		<link rel="canonical" href="https://percep.com.br/comecar" />
+		<link rel="stylesheet" type="text/css" href="landing.css">		
+		<title>Percep - Troque percepções com os seus amigos.</title>
+		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
+		<meta name=viewport content="width=device-width, initial-scale=1">
+		<meta name="robots" content="noindex"/>
+		
+		<meta property="og:title" content="O que seus amigos acham de você?" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://percep.com.br/comecar" />
+		<meta property="og:image" content="https://percep.com.br/images/social/share-bot.png" />
+		<meta property="og:image:alt" content="Uma jovem tira uma selfie com seus amigos. Sobre o rosto dela está o card de votação do percep com o atributo humor, e sobre a cabeça dos amigos balões com a quantidade de estrelas que eles avaliariam." />
+		<meta property="og:description" content="Vote e receba votos dos seus amigos anonimamente, direto no Messenger." />
+		<meta property="og:site_name" content="Percep" />
+		<meta property="fb:admins" content="100027088850164" />
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@percepbr">
+		<meta name="twitter:title" content="Percep - O que seus amigos acham de você?">
+		<meta name="twitter:description" content="Vote, receba votos dos seus amigos e descubra em quais atributos você se destaca. Ah, relaxa, é tudo anônimo e direto no seu Messenger.">
+		<meta name="twitter:image:src" content="https://percep.com.br/images/social/share-bot.png">
 </head>
 <body>
 
