--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 		<title>Percep - Troque percepções com os seus amigos.</title>
 		<meta name="description" content="No Percep você escolhe os atributos que mais se identifica, recebe os votos de seus amigos e também pode votar nos atributos deles.Ah, e relaxa, é tudo anônimo">
 		<meta name=viewport content="width=device-width, initial-scale=1">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff500a">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="theme-color" content="#ffffff">
 		<meta name="robots" content="noindex"/>
 		
 		<meta property="og:title" content="O que seus amigos acham de você?" />
