--- a/saiba-mais-convidar.html
+++ b/saiba-mais-convidar.html
@@ -28,6 +28,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="saibamais.css">
 		<title>percep - como ganhar pontos por convidar um amigo</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff500a">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="theme-color" content="#ffffff">
 		<meta name="robots" content="noindex"/>
 
 </head>
