--- a/saiba-mais-compartilhar.html
+++ b/saiba-mais-compartilhar.html
@@ -43,7 +43,7 @@
 		<div id="header">
 			<img id="logopercep" src="images/logo-percep-horizontal-beta.png" alt="marca percep compostpor símbolo à esquerda e nome escrito à direita">
 		</div>
-	</dix>
+	</div>
 
 	<div id="info">
 		<h1>Ganhe pontos por compartilhar o bot no Facebook</h1>
