--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<img class="headerwhitemessenger" src="images/white-messenger.png" alt="logo em versão branca do Facebook Messenger">
 					</a>
 				</div>
-		</dix>
+		</div>
 
 		<div id="section1">
 			<h1>Você tem ideia de como é percebido?</h1>
@@ -154,7 +154,7 @@
 			<form action="https://formspree.io/contato@percep.com.br" method="POST">
 				<input type="text" name="nome" placeholder="Nome" maxlength="60" required/>
 				<input type="email" name="email" placeholder="E-mail" maxlength="100" required/>
-				<textarea name="message" placeholder="Mensagem" maxlength="2000" required/></textarea>
+				<textarea name="message" placeholder="Mensagem" maxlength="2000" required></textarea>
 				<button type="submit">Enviar</button>
 				<!--<input type="hidden" name="_next" value="https://site.io/thanks.html" />-->
 				<input type="hidden" name="_subject" value="Mensagem pelo site do percep" />
