--- a/termos-e-privacidade.html
+++ b/termos-e-privacidade.html
@@ -40,7 +40,7 @@
 						<img class="headerwhitemessenger" src="images/white-messenger.png" alt="logo em versão branca do Facebook Messenger">
 					</a>
 				</div>
-		</dix>
+		</div>
 		<div id="terms">Termos de Uso e Política de Privacidade
 			<div class="item">1. GERAIS</div>
 				<p>
